# ROVI_proj

./: koordinat mål.txt  ting
PointCloudGen/: CMakeLists.txt  brug af gen
PointCloudGen/src/: methods.hpp
Project_WorkCell/: Scene.wc.xml  visu.rwplay
SamplePlugin/: CMakeLists.txt  plugin-full-sample.py
SamplePlugin/src/: SamplePlugin.cpp  SamplePlugin.hpp
WorkCell(1)/WorkCell/: Scene.wc.xml
ex6/: Bottle.pcd  Bottle1100.pcd  CMakeLists.txt  ex1.cpp  ex2.cpp
